# data_inspector

./: .packit.yaml  LICENSE  README.md  data_inspector.spec  pyproject.toml
src/: data_inspector.py
src/data_inspector/: __init__.py  main.tcss  widgets.py
test/: example.json
